--- a/src/i18n/locale/zh-TW/translation.json
+++ b/src/i18n/locale/zh-TW/translation.json
@@ -6,10 +6,62 @@
     "login": "請先登入",
     "welcome": "歡迎，{{name}}",
     "help": "使用說明",
-    "helpDescription": "\n本應用為智慧城市節點競賽之測試版本，旨在展示無障礙導航與資料處理之應用概念。\n目前系統僅供測試與示範使用，部分資料、功能及介面仍在開發中。\n\n一、系統目的\n本應用模擬智慧城市中之無障礙導引功能，透過測試資料驗證系統可行性與操作流程。\n\n二、資料說明\n所有測試資料僅供展示，並不代表最終成果或實際數據。\n\n三、操作說明\n開啟應用後，即可進入主畫面。\n點擊功能按鈕即可瀏覽或操作相關測試內容。\n系統在部分畫面會顯示「這只是測試」字樣，以提示目前為測試階段。\n\n四、注意事項\n本版本僅供競賽展示與功能驗證，非正式商用版本。\n實際功能與資料將於後續開發階段持續完善。\n如需了解系統原理或技術架構，請參閱專案技術文件。",
+    "helpDescription": {
+        "overview": "歡迎使用我們的地圖 App！我們致力於提供全面的地點資訊服務。\n在全台各地，您都可以使用本 App 作為一般的導航工具；同時，我們正在台北市優先試行「無障礙友善地圖」計畫，未來將逐步擴展到更多城市。",
+        "features": {
+            "general": {
+                "title": "1. 全台通用功能：基本搜尋與導航\n在所有城市，您都可以使用以下基本功能：",
+                "features": [
+                    "搜尋地點：在上方的「搜尋框」輸入店家、景點或地址，即可找到目標位置。",
+                    "路線規劃：找到地點後，可點擊「導航」功能，App 會為您規劃前往的路線，使用方式與一般導航程式相同。"
+                ]
+            },
+            "taipei": {
+                "title": "2. 台北市試行功能：無障礙地圖（請注意：以下功能目前僅限台北市地區）",
+                "features": {
+                    "filter": "在台北市範圍內，點擊地圖右上方的「篩選」圖示，即可根據「無障礙廁所」、「無障礙坡道」或「電梯」等設施，快速找到符合您需求的友善地點。"
+                },
+                "note": "地圖無障礙圖示說明：",
+                "icons": [
+                    "無障礙廁所：代表此地點設有空間足夠、配有扶手的廁所。",
+                    "無障礙坡道：代表此地點的主要出入口平坦或設有坡道。",
+                    "電梯 / 升降梯：代表此地點設有電梯或垂直升降設備。"
+                ]
+            }
+        },
+        "feedback": {
+            "title": "3. 如何回報問題或提供建議\n您的回饋能幫助我們不斷進步：",
+            "steps": [
+                "點擊左上角「選單」圖示，選擇「意見回饋」。",
+                "詳細填寫您的問題或建議後「送出」。"
+            ],
+            "examples": [
+                "無障礙資訊 (台北市)：「A 咖啡廳的無障礙坡道已拆除。」",
+                "導航功能 (所有地區)：「在台中市導航時，路線規劃錯誤。」",
+                "新增地點建議 (台北市)：「推薦台北市的 B 餐廳，他們有無障礙廁所。」"
+            ]
+        },
+        "faq": {
+            "title": "常見問題解答 (FAQ)",
+            "items": [
+                {
+                    "question": "Q:為什麼在我的城市 (非台北市) 找不到任何無障礙設施的圖示或篩選功能？",
+                    "answer": "A:無障礙地圖功能目前為試辦階段，優先以台北市的資料進行測試與優化。我們正努力擴展資料庫，未來將逐步開放更多城市的無障礙資訊。現階段在其他城市，您仍可使用 App 內建的一般地點搜尋與導航功能。感謝您的支持與耐心！"
+                },
+                {
+                    "question": "Q:為什麼我送出台北的無障礙資訊回饋後，沒有馬上看到更新？",
+                    "answer": "A:感謝您的回饋！為確保資訊準確，所有回報都需經過團隊人工審核，作業需要一些時間，請您耐心等候。"
+                },
+                {
+                    "question": "Q:我沒有收到系統寄送的 Email 確認信？",
+                    "answer": "A:請先檢查信箱中的「垃圾郵件」。如果還是沒有，請至「設定」中的「個人資料」頁面，確認您註冊的 Email 地址是否正確。"
+                }
+            ]
+        }
+    },
     "logout": "登出",
-    "settingDesc": "調整偏好設定，例如深色模式、語言、字體大小。",
-    "darkMode": " 深色模式",
+    "settingDesc": "調整偏好設定，例如深淺模式、語言、字體大小。",
+    "darkMode": " 深淺模式",
     "notification": "通知",
     "fontSize": "字體大小",
     "language": "語言",
