feat: 更新多個檔案以支援無障礙路線評分功能，調整翻譯及載入畫面

--- a/src/i18n/locale/en/translation.json
+++ b/src/i18n/locale/en/translation.json
@@ -3,6 +3,9 @@
     "searchPlaceHolder": "Search accessible facilities, attractions, routes...",
     "settingTitle": "Settings",
     "feedback": "Feedback",
+    "feedbackDesc": "Please describe the issue or suggestion you encountered and we will improve it as soon as possible.",
+    "feedbackPlaceholder": "Please enter your feedback...",
+    "submit": "Submit",
     "login": "Please log in first",
     "welcome": "Welcome, {{name}}",
     "help": "Help",
