--- a/src/i18n/locale/zh-TW/translation.json
+++ b/src/i18n/locale/zh-TW/translation.json
@@ -3,6 +3,9 @@
     "searchPlaceHolder": "搜尋無障礙設施、景點、路線...",
     "settingTitle": "設定",
     "feedback": "問題回饋",
+    "feedbackDesc": "請描述您遇到的問題或建議，我們將盡快改善！",
+    "feedbackPlaceholder": "請輸入您的回饋內容...",
+    "submit": "送出",
     "login": "請先登入",
     "welcome": "歡迎，{{name}}",
     "help": "使用說明",
