--- a/src/i18n/locale/zh-TW/translation.json
+++ b/src/i18n/locale/zh-TW/translation.json
@@ -62,6 +62,10 @@
             ]
         }
     },
+    "data": "資料來源：",
+    "tdx": "交通部TDX平臺",
+    "gov": "政府開放資料平台",
+    "moe": "環境部 環境資料開放平臺",
     "logout": "登出",
     "settingDesc": "調整偏好設定，例如深淺模式、語言、字體大小。",
     "darkMode": " 深淺模式",
