feat: 新增使用者登入時的提示功能，改善使用者體驗；更新翻譯檔以支援無障礙便利度與AI警告；擴充字體大小選項至「巨大」

--- a/src/i18n/locale/en/translation.json
+++ b/src/i18n/locale/en/translation.json
@@ -67,6 +67,8 @@
         }
     },
     "logout": "Logout",
+    "accessibleRank": "Accessibility Rank:",
+    "AIwarning": "Gemini AI may be incorrect, please verify important information.",
     "startNavigation": "Start navigation",
     "settingDesc": "Adjust preferences such as dark mode, language, and font size.",
     "darkMode": "Dark Light mode",
