feat: 更新翻譯檔以支援無障礙功能與使用者反饋描述

--- a/src/i18n/locale/en/translation.json
+++ b/src/i18n/locale/en/translation.json
@@ -79,8 +79,9 @@
     "searchResults": "Search results:",
     "planRoute": "Plan route",
     "route": "Route planning",
-    "loadingRoute": "Planning...",
-    "selectRoute": "Selected",
+    "selectRoute":"Select",
+    "loadingRoute": "Planning",
+    "selectedRoute": "Selected",
     "viewOnMap": "View on map",
     "accessibleTitle": "Accessible facilities",
     "accessibleRamp": "Accessible ramp",
