--- a/src/i18n/locale/zh-TW/translation.json
+++ b/src/i18n/locale/zh-TW/translation.json
@@ -78,9 +78,10 @@
     "searchHistory": "搜尋歷史：",
     "searchResults": "搜尋結果：",
     "planRoute": "規劃路線",
+    "selectRoute":"選擇路線",
     "route": "路線規劃",
     "loadingRoute": " 規劃中",
-    "selectRoute": "已選擇",
+    "selectedRoute": "已選擇",
     "viewOnMap": "查看位置",
     "accessibleTitle": "無障礙設施資訊",
     "accessibleRamp": "無障礙斜坡",
